Adjust: Modify Border Strategy to Avoid Gaps
Modified the border strategy for grid elements to prevent tiny gaps on mobile devices and zoomed out views:

-Reduced margin on calculator and children by -1px;

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .App {
   display: flex;
   justify-content: center;
@@ -16,11 +10,13 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   font-size: 1.6rem;
   border: 4px solid rgb(255, 255, 255);
+  margin: -1px; 
 }
 
 .calculator > * {
-  box-shadow: inset 0 0 0 4px rgb(255, 255, 255);
+  border: 4px solid rgb(255, 255, 255);
   padding: 40px;
+  margin: -1px; 
 }
 
 .calculator > *:not(#display):not(#clear):active {
@@ -38,7 +34,7 @@
   white-space: nowrap;  /* Prevents text from wrapping to the next line */
   text-overflow: ellipsis;  /* Optional: displays '...' for overflowed text */
   height: 10px;
-  padding-bottom: 85px;
+  padding-bottom: 80px;
 }
 
 
